# methodology-core

./: .gitignore  AvisoPrivacidad.md  BITACORA.md  LICENSE  Makefile  README.md  docker-compose.yml  license.md  observaciones.md
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  BACKEND_SPEC.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: config.py  dependencies.py  main.py  scheduler.py
backend/app/api/v1/: router.py
backend/app/cache/: permissions.py
backend/app/core/: audit.py  encryption.py  exceptions.py  keycloak.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  application.py  audit_log.py  instrument.py  magic_link.py  metric.py  metric_value.py  revoked_token.py  subject.py  subject_context.py  user.py  user_permission.py
backend/docs/: ACCEPTANCE_CRITERIA.md  AUTH_MODULE_TASKS.md  DESARROLLO_M1_AUTENTICACION.md  PLAN_INICIAL_DESARROLLO.md
backend/docs/decisions/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006.md  ADR-007.md  ADR-008.md  ADR-009.md  ADR-010.md  ADR-011.md  ADR-012.md  ADR-013.md  ADR-014.md  ADR-015.md  ADR-016.md  ADR-017.md  ADR-018.md  ADR-019.md  README.md
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_auth_schema.py  0002_m2_m3_m4_schema.py
backend/tests/: conftest.py
backend/tests/contract/: test_contracts.py
backend/tests/factories/: application_factory.py  instrument_factory.py  metric_factory.py  metric_value_factory.py  subject_factory.py  user_factory.py
backend/tests/integration/auth/: test_audit_log.py  test_auth.py  test_login_logout.py  test_magic_link.py  test_permissions_cache.py  test_rate_limit.py  test_rbac.py
backend/tests/integration/instruments/: test_instruments.py
backend/tests/integration/metrics/: test_metrics.py
backend/tests/integration/operational_registry/: test_operational_registry.py
backend/tests/performance/: locustfile.py
backend/tests/unit/auth/: test_auth.py
backend/tests/unit/instruments/: test_instruments.py
backend/tests/unit/metrics/: test_metrics.py
backend/tests/unit/operational_registry/: test_operational_registry.py
mock/: README.md  (+8 more)
(+226 files in other folders)
