[project]
name = "methodology-backend"
version = "0.1.0"
description = "Backend base scaffold for methodology core"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "sqlalchemy[asyncio]>=2.0.38,<3.0.0",
  "alembic>=1.16.0,<2.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "pyjwt>=2.10.0,<3.0.0",
  "redis>=6.4.0,<7.0.0",
  "apscheduler>=3.11.0,<4.0.0",
  "cryptography>=45.0.0,<46.0.0",
  "structlog>=25.4.0,<26.0.0",
  "slowapi>=0.1.9,<1.0.0",
  "python-json-logger>=3.3.0,<4.0.0",
]

[dependency-groups]
dev = [
  "ruff>=0.12.0,<1.0.0",
  "mypy>=1.16.0,<2.0.0",
  "pytest>=8.4.0,<9.0.0",
  "pytest-asyncio>=1.1.0,<2.0.0",
  "httpx>=0.28.0,<1.0.0",
  "coverage[toml]>=7.10.0,<8.0.0",
  "fakeredis>=2.31.0,<3.0.0",
  "factory-boy>=3.3.0,<4.0.0",
  "locust>=2.38.0,<3.0.0",
  "pre-commit>=4.2.0,<5.0.0",
  "types-redis>=4.6.0.20241004",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/W/F: errores basicos
# I: imports ordenados
# B: patrones peligrosos
# UP: sintaxis moderna
# ASYNC: reglas para async
# S: seguridad basica
select = ["E", "W", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S104", "S105"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = ["app.db.models.*"]
disable_error_code = ["assignment", "arg-type"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
  "unit: unit tests",
  "integration: integration tests",
  "contract: contract tests",
  "performance: performance tests",
]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
